cc_library(
    name = "subscriber_mock",
    hdrs = ["subscriber_mock.hpp"],
    testonly = True,
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs",
        "@googletest//:gtest",
    ],
    visibility = ["//iceoryx_posh/test:__subpackages__"],
)

cc_library(
    name = "publisher_mock",
    hdrs = ["publisher_mock.hpp"],
    testonly = True,
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs",
        "@googletest//:gtest",
    ],
    visibility = ["//iceoryx_posh/test:__subpackages__"],
)
