cc_library(
    name = "subscriber_mock",
    hdrs = ["subscriber_mock.hpp"],
    testonly = True,
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs",
        "@googletest//:gtest",
    ],
    visibility = ["//iceoryx_posh/test:__subpackages__"],
)

cc_library(
    name = "publisher_mock",
    hdrs = ["publisher_mock.hpp"],
    testonly = True,
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs",
        "@googletest//:gtest",
    ],
    visibility = ["//iceoryx_posh/test:__subpackages__"],
)

cc_library(
    name = "base_port_mock",
    hdrs = ["base_port_mock.hpp"],
    testonly = True,
    deps = [
        "//iceoryx_posh",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "client_mock",
    hdrs = ["client_mock.hpp"],
    testonly = True,
    deps = [
        ":base_port_mock",
        "//iceoryx_posh",
        "//iceoryx_hoofs",
        "@googletest//:gtest",
    ],
    visibility = ["//iceoryx_posh/test:__subpackages__"],
)
