cc_test(
    name = "test_popo_used_chunk_list",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_used_chunk_list.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing"
    ],
)
