cc_test(
    name = "test_popo_used_chunk_list",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_used_chunk_list.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_chunk_receiver",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_chunk_receiver.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_chunk_sender",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_chunk_sender.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_subscriber_port",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_subscriber_port.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_publisher_port",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_publisher_port.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_client_port",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_client_port.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "test_popo_server_port_common",
    testonly = True,
    hdrs = ["test_popo_server_port_common.hpp"],
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_server_port",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_server_port_user.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":test_popo_server_port_common",
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_library(
    name = "test_popo_smart_chunk_common",
    testonly = True,
    hdrs = ["test_popo_smart_chunk_common.hpp"],
    deps = [
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_smart_chunk",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_smart_chunk.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":test_popo_smart_chunk_common",
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_sample",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_sample.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":test_popo_smart_chunk_common",
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_request",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_request.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":test_popo_smart_chunk_common",
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)

cc_test(
    name = "test_popo_response",
    srcs = [
        "main_test_posh_modules.cpp",
        "test_popo_response.cpp",
    ],
    linkopts = select({
        "//iceoryx_platform:linux": ["-ldl"],
        "//iceoryx_platform:mac": [],
        "//iceoryx_platform:qnx": [],
        "//iceoryx_platform:unix": [],
        "//iceoryx_platform:win": [],
        "//conditions:default": ["-ldl"],
    }),
    deps = [
        ":test_popo_smart_chunk_common",
        "//iceoryx_posh",
        "//iceoryx_hoofs:iceoryx_hoofs_testing",
        "//iceoryx_posh:iceoryx_posh_testing",
        "@googletest//:gtest",
    ],
)
